# swivel

./: README.md  SECURITY.md  first_run.sh  main.py  pyproject.toml  singple_pager.py  start_service.sh
src/swivel/database/: ble_dto.py  datastorage_json.py
src/swivel/events/: event_database.py  event_subsystem.py
src/swivel/location/: README.md  location_manager.py  location_subscriber.py
src/swivel/scanners/: Info.plist  README.md  ble_scanner.py  ble_scanner.spec
src/swivel/services/: __init__.py  device_service.py  place_service.py  wifi_service.py
