[tool.poetry]
name = "swivel"
version = "1.0.0"
description = "S.W.I.V.E.L. - Scan, Watch, Identify, Validate, Evaluate, Link"
authors = ["derek.hinch <derek.hinch@qompute.ai>"]
readme = "README.md"
include=["src/swivel/*.*"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pyobjc-core = "^10.3.1"
geopy = "^2.4.1"
bleak = "^0.22.3"
pyobjc = "^10.3.1"
aiosqlite = "^0.20.0"
asyncio = "^3.4.3"
greenlet = "^3.1.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^4.0.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
